# SQLiteCrawler

./: .gitignore  README.md  TODO  main.py  pyproject.toml
data/: anonymousvpns_com_crawl.db  anonymousvpns_com_pages.db
src/sqlitecrawler/: __init__.py  config.py  crawl.py  db.py  fetch.py  parse.py  robots.py  schema.py
src/sqlitecrawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
